cleaned out Tom's personal stuff

--- a/css/screen.css
+++ b/css/screen.css
@@ -2,6 +2,7 @@
 /*
 /* Common
 /*
+/* Thanks to http://github.com/mojombo/jekyll for getting me started
 /*****************************************************************************/
 
 /* Global Reset */
